# kmm

./: .buildinfo  .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Makefile  README.md  RELATED_WORK.md  api.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
.github/workflows/: cmake-cuda-multi-compiler.yml  cmake-multi-compiler.yml  documentation.yml  ubuntu-gcc.yml  zenodo-release.yml
_sources/: api.rst.txt
_sources/api/: Array.rst.txt  EventId.rst.txt  RuntimeHandle.rst.txt  build_runtime.rst.txt
api/: Array.html  EventId.html  RuntimeHandle.html  build_runtime.html
docs/: Doxyfile  build_api.py  conf.py  index.rst
examples/: CMakeLists.txt  histogram.cu  histogram.cubin  histogram.ptx  matrix_multiply.cu  point_in_poly.cu  reduction.cu  vector_add.cu
examples/vector_add/: vector_add.cpp  vector_add.cu  vector_add.cuh  vector_add.h
include/: kmm.hpp
include/kmm/: array.hpp  array_base.hpp  block.hpp  block_header.hpp  block_manager.hpp  buffer_manager.hpp  checked_math.hpp  command.hpp  completion.hpp  dag_builder.hpp  device.hpp  event.hpp  event_list.hpp  executor.hpp  future.hpp  identifiers.hpp  jobs.hpp  kmm.cuh  kmm.hpp  manager.hpp  memory.hpp  memory_manager.hpp  object.hpp  object_manager.hpp  panic.hpp  result.hpp  runtime.hpp  runtime_handle.hpp  runtime_impl.hpp  scalar.hpp  scheduler.hpp  scheduler_thread.hpp  task.hpp  task_args.hpp  task_argument.hpp  task_graph.hpp  task_serialize.hpp  types.hpp  utils.hpp  work_queue.hpp  (+2 more)
include/kmm/allocators/: arena.hpp  base.hpp  block.hpp  caching.hpp  device.hpp  system.hpp
include/kmm/api/: access.hpp  argument.hpp  array.hpp  array_argument.hpp  array_backend.hpp  array_base.hpp  array_builder.hpp  array_handle.hpp  distribution.hpp  launcher.hpp  mapper.hpp  packed_array.hpp  partition.hpp  runtime.hpp  runtime_impl.hpp  task_builder.hpp  task_data.hpp
include/kmm/core/: backends.hpp  buffer.hpp  config.hpp  copy_def.hpp  copy_description.hpp  copy_specification.hpp  cuda_device.hpp  data_type.hpp  device_context.hpp  device_info.hpp  domain.hpp  execution_context.hpp  fill_def.hpp  fixed_array.hpp  geometry.hpp  gpu_device.hpp  identifiers.hpp  key_value_pair.hpp  macros.hpp  reduction.hpp  system_info.hpp  task.hpp  view.hpp  work_chunk.hpp  work_range.hpp
include/kmm/cuda/: allocator.hpp  copy_engine.hpp  cuda.cuh  cuda.hpp  device.hpp  executor.hpp  info.hpp  memory.hpp  memory_pool.hpp  types.hpp
include/kmm/host/: device.hpp  executor.hpp  host.hpp  memory.hpp  thread_pool.hpp
include/kmm/internals/: backends.hpp  buffer_manager.hpp  commands.hpp  cuda_stream_manager.hpp  device_stream_manager.hpp  executor.hpp  gpu_stream_manager.hpp  graph_builder.hpp  memory_allocator.hpp  memory_manager.hpp  memory_system.hpp  operation.hpp  scheduler.hpp  task_graph.hpp  task_manager.hpp  worker.hpp
include/kmm/memops/: cuda_copy.hpp  cuda_fill.hpp  cuda_reduction.hpp  gpu_copy.hpp  gpu_fill.hpp  gpu_reducers.hpp  gpu_reduction.hpp  host_copy.hpp  host_fill.hpp  host_reducers.hpp  host_reduction.hpp  types.hpp
include/kmm/utils/: checked_math.hpp  completion.hpp  cuda.hpp  error_ptr.hpp  fixed_array.hpp  gpu.hpp  hash_utils.hpp  integer_fun.hpp  key_value_pair.hpp  macros.hpp  memory_pool.hpp  notify.hpp  panic.hpp  poll.hpp  result.hpp  scope_guard.hpp  small_vector.hpp  view.hpp  waker.hpp  work_queue.hpp
include/kmm/worker/: block_manager.hpp  buffer_registry.hpp  command.hpp  commands.hpp  device_stream_manager.hpp  executor.hpp  job.hpp  jobs.hpp  memory_manager.hpp  memory_system.hpp  runner.hpp  scheduler.hpp  task_graph.hpp  thread.hpp  worker.hpp
src/: array.cpp  array_base.cpp  block.cpp  block_manager.cpp  buffer_manager.cpp  checked_math.cpp  dag_builder.cpp  device.cpp  executor.cpp  future.cpp  jobs.cpp  kmm.cpp  kmm.cu  manager.cpp  memory.cpp  memory_manager.cpp  object_manager.cpp  panic.cpp  runtime.cpp  runtime_handle.cpp  runtime_impl.cpp  scheduler.cpp  scheduler_thread.cpp  task.cpp  task_graph.cpp  utils.cpp  worker.cpp  worker_thread.cpp
src/allocators/: arena.cpp  base.cpp  block.cpp  caching.cpp  cuda.cpp  device.cpp  system.cpp
src/api/: access.cpp  array.cpp  array_backend.cpp  array_base.cpp  array_builder.cpp  array_handle.cpp  distribution.cpp  mapper.cpp  partition.cpp  runtime.cpp  runtime_impl.cpp
src/core/: backends.cpp  config.cpp  copy_description.cpp  copy_spec.cpp  cuda_device.cpp  data_type.cpp  device_context.cpp  device_info.cpp  execution_context.cpp  gpu_device.cpp  identifiers.cpp  reduction.cpp  system_info.cpp  task.cpp
src/cuda/: allocator.cpp  copy_engine.cpp  cuda.cpp  cuda.cu  device.cpp  executor.cpp  info.cpp  memory.cpp  memory_pool.cpp  types.cpp
src/host/: device.cpp  executor.cpp  host.cpp  memory.cpp  thread_pool.cpp
src/internals/: backends.cpp  buffer_manager.cpp  cuda_stream_manager.cpp  device_stream_manager.cpp  executor.cpp  gpu_stream_manager.cpp  memory_allocator.cpp  memory_manager.cpp  memory_system.cpp  operation.cpp  scheduler.cpp  task_graph.cpp  worker.cpp
src/memops/: cuda_copy.cpp  cuda_fill.cpp  cuda_fill.cu  cuda_reducers.cuh  cuda_reduction.cu  gpu_copy.cpp  gpu_fill.cu  gpu_operators.cuh  gpu_reduction.cpp  gpu_reduction.cu  host_copy.cpp  host_fill.cpp  host_operators.hpp  host_reducers.hpp  host_reduction.cpp  types.cpp
src/utils/: checked_math.cpp  cuda.cpp  gpu.cpp  memory_pool.cpp  notify.cpp  panic.cpp
src/worker/: block_manager.cpp  buffer_registry.cpp  device_stream_manager.cpp  executor.cpp  job.cpp  jobs.cpp  memory_manager.cpp  memory_system.cpp  runner.cpp  scheduler.cpp  task_graph.cpp  thread.cpp  worker.cpp
test/: CMakeLists.txt  kmmTest.cpp  kmmTest.cu  memory_manager.cpp  test_checked_math.cpp  test_dag_builder.cpp  test_geom.cpp  test_integer_fun.cpp  test_memory_manager.cpp  test_memory_pool.cpp  test_object.cpp  test_object_manager.cpp  test_result.cpp  test_small_vector.cpp  test_view.cpp
test/core/: test_geometry.cpp
test/utils/: test_checked_math.cpp  test_integer_fun.cpp  test_small_vector.cpp  test_view.cpp
(+12 files in other folders)
